[package]
authors      = ["Tony <repositony@outlook.com>"]
description  = "Command line tool to convert MCNP meshes to VTK files"
edition      = "2024"
keywords     = ["mcnp", "mesh", "vtk"]
license      = "GPL-3.0 license"
name         = "mesh2vtk"
readme       = "readme.md"
repository   = "https://github.com/repositony/mesh2vtk"
rust-version = "1.85"
version      = "2.1.0"

[dependencies]
# core library, not currently for public use
ntools = { git = "ssh://git@github.com/repositony/ntools.git", branch = "main", features = [
    "hdf5",
    "mesh",
] }

# external
anyhow    = "1.0.97"
clap      = { version = "4.5.31", features = ["derive", "wrap_help"] }
log       = "0.4.26"
stderrlog = "0.6.0"
vtkio     = { git = "https://github.com/elrnv/vtkio.git", rev = "2432be9" }

[lints.rust]
unsafe_code = "forbid"

[[bin]]
doc  = false
name = "mesh2vtk"

[profile.dist]
allow-dirty = ["ci", "msi"]
inherits    = "release"
lto         = "thin"
